# linalgebra

./: CMakeLists.txt  README.md
data/: matrix.txt
include/: Fraction.h  Matrix.h  TUI.h  Timer.h  combinatorics.h
source/: Fraction.cpp  Matrix.cpp  TUI.cpp  Timer.cpp  combinatorics.cpp  main.cpp
